--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@nuxtjs/bulma": "^1.3.0",
     "@nuxtjs/composition-api": "^0.17.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
