--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/bulma": "^1.3.0",
     "@nuxtjs/composition-api": "^0.17.0",
+    "@tinymce/tinymce-vue": "^4.0.0",
     "core-js": "^3.6.5",
     "eslint-plugin-vue-libs": "^4.0.0",
     "nuxt": "^2.14.6",
+    "nuxt-buefy": "^0.4.4",
     "pug": "^3.0.0"
   },
   "devDependencies": {
